// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Avo's trackSchemaFromEvent destination action: all fields 1`] = `
Array [
  Object {
    "appName": "COu3q#Df",
    "appVersion": "COu3q#Df",
    "createdAt": "COu3q#Df",
    "eventHash": null,
    "eventId": null,
    "eventName": "COu3q#Df",
    "eventProperties": Array [
      Object {
        "propertyName": "testType",
        "propertyType": "string",
      },
    ],
    "libPlatform": "Segment",
    "libVersion": "1.0.0",
    "messageId": "COu3q#Df",
    "sessionId": "_",
    "type": "event",
  },
]
`;

exports[`Testing snapshot for Avo's trackSchemaFromEvent destination action: expect app Version to be extracted from property when set in settings 1`] = `
Array [
  Object {
    "appName": "COu3q#Df",
    "appVersion": "2.0.3",
    "createdAt": "COu3q#Df",
    "eventHash": null,
    "eventId": null,
    "eventName": "COu3q#Df",
    "eventProperties": Array [
      Object {
        "propertyName": "testType",
        "propertyType": "string",
      },
    ],
    "libPlatform": "Segment",
    "libVersion": "1.0.0",
    "messageId": "COu3q#Df",
    "sessionId": "_",
    "type": "event",
  },
]
`;

exports[`Testing snapshot for Avo's trackSchemaFromEvent destination action: required fields 1`] = `
Array [
  Object {
    "appName": "unnamed Segment app",
    "appVersion": "unversioned",
    "createdAt": "COu3q#Df",
    "eventHash": null,
    "eventId": null,
    "eventName": "COu3q#Df",
    "eventProperties": Array [
      Object {
        "propertyName": "testType",
        "propertyType": "string",
      },
    ],
    "libPlatform": "Segment",
    "libVersion": "1.0.0",
    "messageId": "COu3q#Df",
    "sessionId": "_",
    "type": "event",
  },
]
`;
